--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Project</title>
-	
+	<link rel="stylesheet" href="style/style.css">
+	<script src="javascript/javascript.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Cormorant+Infant" rel="stylesheet">
 </head>
 <body>
-	
+	<header>
+		<div class="top-line">
+			<h1>Храм святого преподобного Саввы Сторожевского</h1>
+			<p class="top-paragraph">Местная религиозная организация Московской епархии Русской Православной Церкви (Московский Патриархат)</p>
+			<div class="menu">
+				<ul class="top-menu wraper">
+					<li class="tap">ГЛАВНАЯ</li>
+					<li class="tap">ПРП. САВВА СТОРОЖЕВСКИЙ</li>
+					<li class="tap">ЖИЗНЬ ПРИХОДА</li>
+					<li class="tap">ФОТОАЛЬБОМ</li>
+					<li class="tap">КОНТАКТЫ</li>
+					<li class="tap">ПОЖЕРТВОВАНИЯ</li>
+				</ul>
+			</div>
+		</div>
+	</header>
 </body>
 </html>
