--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
 			</div>
 		</div>
 	</header>
+	<div class="wraper appeal">
+		<div class="appeal-text">
+			<h2>Дорогие братья <br>и сестры</h2>
+			<p class="appeal-p">Приглашаем Вас каждое воскресенье в 13.00 на молебен строительстве Храма преподобного Саввы Сторожевского. Молебен служится на месте строительства по адресу: пл. Викторио Кодовильи, вл. 1 напротив бывшего кинотеатра “Енисей”</p>
+		</div>
+	</div>
 </body>
 </html>
