--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 			<p class="top-paragraph">Местная религиозная организация Московской епархии Русской Православной Церкви (Московский Патриархат)</p>
 			<div class="menu">
 				<ul class="top-menu wraper">
-					<li class="tap">ГЛАВНАЯ</li>
+					<li class="tap start">ГЛАВНАЯ</li>
 					<li class="tap">ПРП. САВВА СТОРОЖЕВСКИЙ</li>
 					<li class="tap">ЖИЗНЬ ПРИХОДА</li>
 					<li class="tap">ФОТОАЛЬБОМ</li>
 					<li class="tap">КОНТАКТЫ</li>
-					<li class="tap">ПОЖЕРТВОВАНИЯ</li>
+					<li class="tap finish">ПОЖЕРТВОВАНИЯ</li>
 				</ul>
 			</div>
 		</div>
