--- a/index.html
+++ b/index.html
@@ -25,9 +25,33 @@
 		</div>
 	</header>
 	<div class="wraper appeal">
-		<div class="appeal-text">
-			<h2>Дорогие братья <br>и сестры</h2>
-			<p class="appeal-p">Приглашаем Вас каждое воскресенье в 13.00 на молебен строительстве Храма преподобного Саввы Сторожевского. Молебен служится на месте строительства по адресу: пл. Викторио Кодовильи, вл. 1 напротив бывшего кинотеатра “Енисей”</p>
+		<div class="container-mid wraper">
+			<div class="appeal-text">
+				<h2>Дорогие братья <br>и сестры</h2>
+				<p class="appeal-p">Приглашаем Вас каждое воскресенье в 13.00 на молебен строительстве Храма преподобного Саввы Сторожевского. Молебен служится на месте строительства по адресу: пл. Викторио Кодовильи, вл. 1 напротив бывшего кинотеатра “Енисей”</p>
+			</div>
+		</div>	
+	</div>
+
+	<div class="wraper information">
+		<div class="container left-container">
+			<div class="big-block">
+				<img src="images/image1.png" alt="">
+				<span class="data">7 фев 2017</span>
+				<h3>Освящение закладного камня</h3>
+				<p>7 февраля 2016 года в 14.00 прихожане строящегося храма в честь преподобного Саввы Сторожевского встречали владыку Пантелеимона, епископа Орехово-Зуевского. Жители нашего района собрались на чин освящения закладного камня в фундамент будущего храма. Это поистине историческое событие для жителей нашего района и города в целом. Храм преподобного Саввы Сторожевского... великого подвижника и ученика преподобного Сергия Радонежского, станет единственным в нашей столице.</p>
+				<button class="more-details">Подробнее</button>
+			</div>
+			<div class="big-block">
+				<img src="images/image2.png" alt="">
+				<span class="data">11 фев 2017</span>
+				<h3>Освящение закладного камня</h3>
+				<p>2 февраля 2017 года строительную площадку храма преподобного Саввы Сторожевского в Измайлово посетили член комитета Госдумы по земельным отношениям и строительству, советник Святейшего Патриарха Московского и всея Руси Кирилла, Владимир Иосифович Ресин. Вместе с ним строящийся храм посетил архимандрит Илия. В ходе визита были отмечены значительные успехи строительства и обсуждены ближайшие планы продолжения работ.</p>
+				<button class="more-details">Подробнее</button>
+			</div>
+		</div>
+		<div class="container rigt-container">
+			
 		</div>
 	</div>
 </body>
