--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 				<h2>Дорогие братья <br>и сестры</h2>
 				<p class="appeal-p">Приглашаем Вас каждое воскресенье в 13.00 на молебен строительстве Храма преподобного Саввы Сторожевского. Молебен служится на месте строительства по адресу: пл. Викторио Кодовильи, вл. 1 напротив бывшего кинотеатра “Енисей”</p>
 			</div>
+			<div class="clear"></div>
 		</div>	
 	</div>
 
@@ -39,20 +40,77 @@
 				<img src="images/image1.png" alt="">
 				<span class="data">7 фев 2017</span>
 				<h3>Освящение закладного камня</h3>
-				<p>7 февраля 2016 года в 14.00 прихожане строящегося храма в честь преподобного Саввы Сторожевского встречали владыку Пантелеимона, епископа Орехово-Зуевского. Жители нашего района собрались на чин освящения закладного камня в фундамент будущего храма. Это поистине историческое событие для жителей нашего района и города в целом. Храм преподобного Саввы Сторожевского... великого подвижника и ученика преподобного Сергия Радонежского, станет единственным в нашей столице.</p>
+				<p class="brief-information">7 февраля 2016 года в 14.00 прихожане строящегося храма в честь преподобного Саввы Сторожевского встречали владыку Пантелеимона, епископа Орехово-Зуевского. Жители нашего района собрались на чин освящения закладного камня в фундамент будущего храма. Это поистине историческое событие для жителей нашего района и города в целом. Храм преподобного Саввы Сторожевского... великого подвижника и ученика преподобного Сергия Радонежского, станет единственным в нашей столице.</p>
 				<button class="more-details">Подробнее</button>
 			</div>
 			<div class="big-block">
 				<img src="images/image2.png" alt="">
 				<span class="data">11 фев 2017</span>
 				<h3>Освящение закладного камня</h3>
-				<p>2 февраля 2017 года строительную площадку храма преподобного Саввы Сторожевского в Измайлово посетили член комитета Госдумы по земельным отношениям и строительству, советник Святейшего Патриарха Московского и всея Руси Кирилла, Владимир Иосифович Ресин. Вместе с ним строящийся храм посетил архимандрит Илия. В ходе визита были отмечены значительные успехи строительства и обсуждены ближайшие планы продолжения работ.</p>
+				<p class="brief-information">2 февраля 2017 года строительную площадку храма преподобного Саввы Сторожевского в Измайлово посетили член комитета Госдумы по земельным отношениям и строительству, советник Святейшего Патриарха Московского и всея Руси Кирилла, Владимир Иосифович Ресин. Вместе с ним строящийся храм посетил архимандрит Илия. В ходе визита были отмечены значительные успехи строительства и обсуждены ближайшие планы продолжения работ.</p>
 				<button class="more-details">Подробнее</button>
 			</div>
 		</div>
-		<div class="container rigt-container">
-			
+		<div class="container right-container">
+			<div class="mini-cube">
+				<img src="images/mini1.png">
+				<h3>Молебен 19.02.2017</h3>
+				<p class="brief-information">19 февраля в этом году совпадает с неделей о Страшном Суде...</p>
+				<button class="more-details-small">ПОДРОБНЕЕ</button>		
+			</div>
+			<div class="mini-cube">
+				<img src="images/mini2.png">
+				<h3>Молебен 12.02.2017</h3>
+				<p class="brief-information">12 февраля в этом году совпадает с неделей о блудном сыне...</p>
+				<button class="more-details-small">ПОДРОБНЕЕ</button>
+			</div>
+			<div class="mini-cube">
+				<img src="images/mini3.png">
+				<h3>Молебен 29.01.2017</h3>
+				<p class="brief-information">29 января Святая Православная Церковь отмечает поклонение честным веригам апостола... Петра.</p>
+				<button class="more-details-small">ПОДРОБНЕЕ</button>
+			</div>
+			<div class="mini-cube">
+				<img src="images/mini4.png">
+				<h3>Молебен 22.01.2017</h3>
+				<p class="brief-information">2 января прихожане нашего храма собрались на традиционный молебен... преподобному Савве Сторожевскому. </p>
+				<button class="more-details-small">ПОДРОБНЕЕ</button>
+			</div>
+			<div class="mini-cube">
+				<img src="images/mini5.png">
+				<h3>Молебен 19.02.2017</h3>
+				<p class="brief-information">19 февраля в этом году совпадает с неделей о Страшном Суде...</p>
+				<button class="more-details-small">ПОДРОБНЕЕ</button>
+			</div>
+			<div class="mini-cube">
+				<img src="images/mini6.png">
+				<h3>Молебен 19.02.2017</h3>
+				<p class="brief-information">19 февраля в этом году совпадает с неделей о Страшном Суде...</p>
+				<button class="more-details-small">ПОДРОБНЕЕ</button>
+			</div>
+			<div class="mini-cube">
+				<img src="images/mini7.png">
+				<h3>Молебен 19.02.2017</h3>
+				<p class="brief-information">19 февраля в этом году совпадает с неделей о Страшном Суде...</p>
+				<button class="more-details-small">ПОДРОБНЕЕ</button>
+			</div>
+			<div class="mini-cube">
+				<img src="images/mini8.png">
+				<h3>Молебен 19.02.2017</h3>
+				<p class="brief-information">19 февраля в этом году совпадает с неделей о Страшном Суде...</p>
+				<button class="more-details-small">ПОДРОБНЕЕ</button>
+			</div>
+		</div>
+		<div class="clear"></div>
+	</div>
+
+	<div class="building wraper">
+		<div class="building-position">
+			<label class="building-label" for="button-building">Ход строительства</label>
+			<button id="button-building" class="more-details">Подробнее</button>
+			<div class="clear"></div>
 		</div>
 	</div>
+
 </body>
 </html>
